--- a/bootstrap-project-landingpage.html
+++ b/bootstrap-project-landingpage.html
@@ -14,29 +14,31 @@
 .jumbotron {
     /* The image used */
     background-image: url("joshua-earle-223653.jpg");
-
     /* Set a specific height */
-    min-height: 500px; 
-
+    min-height: 500px;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+   body {
+  position: relative;
+}
  </style>
  </head>
- <body>
-<nav class="navbar navbar-inverse">
+ <body data-spy="scroll" data-target="#navbar-example">
+   
+<nav class="navbar navbar-fixed-top navbar-inverse" id="navbar-example">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">WebSiteName</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li class="active"><a href="#1">Home</a></li>
+      <li><a href="#2">Page 1</a></li>
+      <li><a href="#3">Page 2</a></li>
+      <li><a href="#4">Page 3</a></li>
     </ul>
   </div>
 </nav>
@@ -56,21 +58,21 @@
    <p>TEXT!!!!</p>
      <p>TEXT!!!!</p>
      <p>TEXT!!!!</p>
+     <p id="1">TEXT!!!!</p>
+     <p>TEXT!!!!</p>
+     <p>TEXT!!!!</p>
+     <p id="2">TEXT!!!!</p>
+     <p>TEXT!!!!</p>
+     <p>TEXT!!!!</p>
+     <p>TEXT!!!!</p>
+     <p id="3">TEXT!!!!</p>
      <p>TEXT!!!!</p>
      <p>TEXT!!!!</p>
      <p>TEXT!!!!</p>
      <p>TEXT!!!!</p>
      <p>TEXT!!!!</p>
      <p>TEXT!!!!</p>
-     <p>TEXT!!!!</p>
-     <p>TEXT!!!!</p>
-     <p>TEXT!!!!</p>
-     <p>TEXT!!!!</p>
-     <p>TEXT!!!!</p>
-     <p>TEXT!!!!</p>
-     <p>TEXT!!!!</p>
-     <p>TEXT!!!!</p>
-     <p>TEXT!!!!</p>
+     <p id="4">TEXT!!!!</p>
    
    </div>
 
