--- a/bootstrap-project-landingpage.html
+++ b/bootstrap-project-landingpage.html
@@ -6,7 +6,8 @@
   <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       
@@ -21,30 +22,45 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    text-shadow: 1px 2px dimgray;
+    color: whitesmoke;
 }
    body {
   position: relative;
 }
+   img {
+     width: auto;
+     height: 300px;
+   }
  </style>
  </head>
  <body data-spy="scroll" data-target="#navbar-example">
    
-<nav class="navbar navbar-fixed-top navbar-inverse" id="navbar-example">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#1">Home</a></li>
-      <li><a href="#2">Page 1</a></li>
-      <li><a href="#3">Page 2</a></li>
-      <li><a href="#4">Page 3</a></li>
+   
+   <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top" id="navbar-example">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">Navbar</a>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="nav nav-pills nav-fill">
+      <li class="nav-item active">
+        <a class="nav-link" href="#1">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#2">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#3">Another</a>
+      </li>
     </ul>
   </div>
 </nav>
    
 <div class="jumbotron">
-  <div class="parallax"></div>
+  <div class="parallax">
+    <div class="container">
   <h1 class="display-3">Parallax!</h1>
   <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
   <hr class="my-4">
@@ -52,6 +68,8 @@
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </p>
+    </div>
+    </div>
 </div>
    
    <div class="container">
@@ -73,6 +91,17 @@
      <p>TEXT!!!!</p>
      <p>TEXT!!!!</p>
      <p id="4">TEXT!!!!</p>
+
+     <div class="container">
+<div class="card" style="width: 20rem;">
+  <img class="card-img-top" src="ivars-krutainis-153526.jpg" alt="Card image cap">
+  <div class="card-block">
+    <h4 class="card-title">Card title</h4>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+  </div>
+</div>
    
    </div>
 
