--- a/bootstrap-project-landingpage.html
+++ b/bootstrap-project-landingpage.html
@@ -92,8 +92,10 @@
      <p>TEXT!!!!</p>
      <p id="4">TEXT!!!!</p>
 
-     <div class="container">
-<div class="card" style="width: 20rem;">
+
+       <div class="row">
+       <div class="col-sm-4">
+<div class="card">
   <img class="card-img-top" src="ivars-krutainis-153526.jpg" alt="Card image cap">
   <div class="card-block">
     <h4 class="card-title">Card title</h4>
@@ -102,9 +104,27 @@
   </div>
   </div>
 </div>
-   
-   </div>
-
+            <div class="col-sm-4">
+<div class="card">
+  <img class="card-img-top" src="ivars-krutainis-153526.jpg" alt="Card image cap">
+  <div class="card-block">
+    <h4 class="card-title">Card title</h4>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+  </div>
+</div>
+          <div class="col-sm-4">
+<div class="card">
+  <img class="card-img-top" src="ivars-krutainis-153526.jpg" alt="Card image cap">
+  <div class="card-block">
+    <h4 class="card-title">Card title</h4>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+  </div>
+            </div>
+</div>
    
       
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
